--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
 							<h1>Hi, I am Sambit Mondal</h1>
-							<p>I am datascience enthusiast. I have a background of ETL developer with 7+ years of experience. Basically after processing a lot of data for years, now I want to debug the data for useful business insights. Using programming and mathematical tools, I want to provide services for a better data driven approach.</p>
+							<p>I am data science enthusiast. I have a background of ETL developer with 7+ years of experience. Basically after processing a lot of data for years, now I want to debug the data for useful business insights. Using programming and mathematical tools, I want to provide services for a better data driven approach.</p>
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">Here is my portfolio</a></li>
 							</ul>
@@ -124,17 +124,17 @@
 								<section>
 									<span></span>
 									<h3>B.tech in Electronics and Communication Engineering from Jalpaiguri Government Engineering College</h3>
-									<p>CGPA: 7.92</br>Year: 2010-2014</p>
+									<p>Year: 2010-2014</p>
 								</section>
 								<section>
 									<span></span>
 									<h3>Higher Secondary Education from Berhampur Jagannath Academy</h3>
-									<p>Score: 81.9%</br>Year: 2008-2010</p>
+									<p>Year: 2008-2010</p>
 								</section>
 								<section>
 									<span></span>
 									<h3>Secondary Education from Berhampur Jagannath Academy</h3>
-									<p>Score: 88.6%</br>Year: 2008</p>
+									<p>Year: 2008</p>
 								</section>
 							</div>
 						
