--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 							<li><a href="#intro">Welcome</a></li>
 							<li><a href="#one">About Me</a></li>
 							<li><a href="#two">Skills</a></li>
-							<li><a href="#three">Articles</a></li>
+							<li><a href="#three">End-to-end Projects</a></li>
 							<li><a href="#four">Education History</a></li>
 							<li><a href="#five">Contact Me</a></li>
 						</ul>
