--- a/generic.html
+++ b/generic.html
@@ -34,7 +34,7 @@
 							<h1 class="major">SAMBIT MONDAL</h1>
 							<span class="image fit"><img src="images/0_WaSU4jv6jFbjE0Hd.jpg" alt="" /></span>
 							<p>From 24th Oct, 2018 to till date</br>IT Analyst at Tata Consultancy Services</p>
-							<p>As a part of CMR (Customer Management Repository) team, I have worked on creation of customer profiles. I have mainly worked on new type of account addition, new customer package addition. Developed red flag screening process for AML KYC using machine learning classification model to idetify invalid business association. Improved a matching engine for bank customer ID as per business rules, where on certain text fields NLP and a regressional model has been used for providing matching score.</p>
+							<p>As a part of CMR (Customer Management Repository) team, I have worked on creation of customer profiles. I have mainly worked on new type of account addition, new customer package addition. Developed red flag screening process for AML KYC using machine learning classification model to idetify invalid business association. Improved a matching engine for bank customer ID as per business rules.</p>
 							<p> From 26th Oct, 2017 to 17th Oct, 2018</br>Senior Software Engineer at Accenture</p>
 							<p>As a part of DQIP (Data Quality Integration Protocol) team, I have mainly worked on business rules, policies on data quality part. I have developed sanitation processes for fieldwise validation rules for each file. I have developed a metadatahub for these process using Abinito MHUB tool for end to end business model.</p>
 							<p> From 20th Nov,2014 to 17th Oct, 2017</br>Software Engineer at Tech Mahindra</p>
