--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
 							<h1>Hi, I am Sambit Mondal</h1>
-							<p>I am data science enthusiast. I have a background of ETL developer with 7+ years of experience. Basically after processing a lot of data for years, now I want to debug the data for useful business insights. Using programming and mathematical tools, I want to provide services for a better data driven approach.</p>
+							<p>I am data science enthusiast. I have a background in Retail Banking domain with 7+ years of experience. Using programming and mathematical tools, I want to provide services for a better data driven approach.</p>
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">Here is my portfolio</a></li>
 							</ul>
