--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
 							<h1>Hi, I am Sambit Mondal</h1>
-							<p>I am data science enthusiast. I have a background in Retail Banking domain with 7+ years of experience. Using programming and mathematical tools, I want to provide services for a better data driven approach.</p>
+							<p>I have a total of 8 years of IT experience (1 year in Machine Learning) and am currently looking for job opportunities in Machine Learning and Deep Learning domain. I have started as an ETL developer and am currently working in Machine Learning, Deep Learning, Natural Language Processing, Computer Vision, Python, Google Cloud Platform.</p>
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">Here is my portfolio</a></li>
 							</ul>
