--- a/generic.html
+++ b/generic.html
@@ -34,7 +34,17 @@
 							<h1 class="major">SAMBIT MONDAL</h1>
 							<span class="image fit"><img src="images/0_WaSU4jv6jFbjE0Hd.jpg" alt="" /></span>
 							<p>From 24th Oct, 2018 to till date</br>IT Analyst at Tata Consultancy Services</p>
-							<p>As a part of CMR (Customer Management Repository) team, I have worked on creation of customer profiles. I have mainly worked on new type of account addition, new customer package addition. Developed red flag screening process for AML KYC using machine learning classification model to idetify invalid business association. Improved a matching engine for bank customer ID as per business rules.</p>
+							<p><ul style="list-style-type:square">
+  <li><b>Project:</b> Customer Management Repository</li>
+</ul>
+
+<ul style="list-style-type:disc">
+  <li>Statistical Analysis (Univariate and Multivariate) on several types of financial data.</li>
+  <li>Machine Learning and Deep Learning model development (regression and classification</li>
+  <li>Customer segmentation analysis using clustering and provided critical insights and generated reports.</li>
+  <li>Designed the data pipeline and deployed end to end project using Flask api on GCP server.</li>
+  <li><b>Tech:</b> Python, Scikit‑Learn, Numpy, Pandas, Natural Language Processing, Matplotlib, SQL, GCP, Flask api.</li>
+</ul></p>
 							<p> From 26th Oct, 2017 to 17th Oct, 2018</br>Senior Software Engineer at Accenture</p>
 							<p>As a part of DQIP (Data Quality Integration Protocol) team, I have mainly worked on business rules, policies on data quality part. I have developed sanitation processes for fieldwise validation rules for each file. I have developed a metadatahub for these process using Abinito MHUB tool for end to end business model.</p>
 							<p> From 20th Nov,2014 to 17th Oct, 2017</br>Software Engineer at Tech Mahindra</p>
