--- a/generic.html
+++ b/generic.html
@@ -45,8 +45,21 @@
   <li>Designed the data pipeline and deployed end to end project using Flask api on GCP server.</li>
   <li><b>Tech:</b> Python, Scikit‑Learn, Numpy, Pandas, Natural Language Processing, Matplotlib, SQL, GCP, Flask api.</li>
 </ul></p>
+
+<p><ul style="list-style-type:square">
+  <li><b>Project:</b> Retail KYC</li>
+</ul>
+
+<ul style="list-style-type:disc">
+  <li>Designing Data Pipelines as per client requirement and performed rule-based transformation, aggregation.</li>
+  <li>Developing Graphs in GDE (Graphical Development Environment, Scripts, One-time activities and Adhoc fix.</li>
+  <li>Creating scripts in Unix and loading test data to SIT, UAT environment for testing (Test datasets required for data validation and testing purpose) and generated reports.
+</li>
+  <li>Migration Activity, testing in lower environment. Creating AIR TAGs and Migration Documents (Migrating objects to other environments (SIT, UAT, Mass, cob, preprod and PROD)).</li>
+  <li><b>Tech:</b>  Ab Initio (ETL tool), SQL developer and Tectia, Autosys.</li>
+</ul></p>
 							<p> From 26th Oct, 2017 to 17th Oct, 2018</br>Senior Software Engineer at Accenture</p>
-							<p>As a part of DQIP (Data Quality Integration Protocol) team, I have mainly worked on business rules, policies on data quality part. I have developed sanitation processes for fieldwise validation rules for each file. I have developed a metadatahub for these process using Abinito MHUB tool for end to end business model.</p>
+							<p></p>
 							<p> From 20th Nov,2014 to 17th Oct, 2017</br>Software Engineer at Tech Mahindra</p>
 							<p>As a part of CDCI (Customer Data Customer Insight) team, I have designed datapipelines to segregate data from various sources like POS, transaction data, geographical data, personal informations and clean, preprocess the data to store into datawarehouse tables. Developed SQL, PLSQL queries and unix scripts to generate reports from these tables. I have worked on addition or modification on source data and preprocessing rules and done data analysis and the existing process for improvements like alert mail generation, automation and dependency analysis. I have worked on migrating objects to production and post deployment support task.</p>
 						</div>
