--- a/generic.html
+++ b/generic.html
@@ -59,9 +59,28 @@
   <li><b>Tech:</b>  Ab Initio (ETL tool), SQL developer and Tectia, Autosys.</li>
 </ul></p>
 							<p> From 26th Oct, 2017 to 17th Oct, 2018</br>Senior Software Engineer at Accenture</p>
-							<p></p>
+							<p><ul style="list-style-type:square">
+  <li><b>Project:</b> Data Quality Integration Protocol </li>
+</ul>
+
+<ul style="list-style-type:disc">
+  <li>Developing Graphs, Scripts, XFR, Plans, PSET, DML, DBC [As per project requirement we makechanges in parameters, transform rules, logic, DML files, SQL queries, or changing the mappingetc.)</li>
+  <li>Server Migration as per new server standards (As a part of migration project we need to make changes in the existing code as per new server standards to decommission the old server and continue with the new one)</li>
+  <li>Worked on business rules, policies on data quality part and developed sanitation processes for field wise validation rules for each file.</li>
+  <li>Developed a metadata hub for existing process using Abinito MHUB tool for end-to-end business model.</li>
+  <li><b>Tech:</b> Ab Initio (ETL tool), Metadata Hub, SQL developer and Tectia, Control Centre, Autosys.
+</li>
+</ul></p>
 							<p> From 20th Nov,2014 to 17th Oct, 2017</br>Software Engineer at Tech Mahindra</p>
-							<p>As a part of CDCI (Customer Data Customer Insight) team, I have designed datapipelines to segregate data from various sources like POS, transaction data, geographical data, personal informations and clean, preprocess the data to store into datawarehouse tables. Developed SQL, PLSQL queries and unix scripts to generate reports from these tables. I have worked on addition or modification on source data and preprocessing rules and done data analysis and the existing process for improvements like alert mail generation, automation and dependency analysis. I have worked on migrating objects to production and post deployment support task.</p>
+<p><ul style="list-style-type:square">
+  <li><b>Project:</b> Consumer Data Customer Insight</li>
+</ul>
+
+<ul style="list-style-type:disc">
+  <li>Designed data pipelines to segregate data from various sources like POS, transaction data, geographical data, personal information and clean, preprocess the data to store into Datawarehouse tables. Developed SQL, PLSQL queries and Unix scripts to generate reports from these tables.</li>
+  <li>Analysis of existing process and doing improvements like alert mail generation, script automation, dependency analysis (As a part Enhancement project we need to validate and make few recommended changes for more efficiency).</li>
+  <li><b>Tech:</b> Ab Initio (ETL tool), SQL developer, Putty, Autosys.</li>
+</ul></p>							
 						</div>
 					</section>
 			</div>
