--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 							<div class="content">
 								<div class="inner">
 									<h2>Work Experience</h2>
-									<p>I am currently working as an IT analyst at Tata Consultancy services</p>
+									<p>I am currently working as an IT analyst at Tata Consultancy services...</p>
 									<ul class="actions">
 										<li><a href="generic.html" class="button">Full Details</a></li>
 									</ul>
@@ -81,7 +81,7 @@
 								<section>
 									<span class="icon solid major fa-cog"></span>
 									<h3>Domain Experience</h3>
-									<p>Data warehousing, Credit card data management, Data quality management, KYC & AML policies</p>
+									<p>Machine Learning, Deep Learning, Natural Language Processing, Computer Vision, Speech Processing, Data warehousing, Credit card data management, Data quality management, KYC & AML policies</p>
 								</section>
 							</div>
 						</div>
