--- a/generic.html
+++ b/generic.html
@@ -35,15 +35,17 @@
 							<span class="image fit"><img src="images/0_WaSU4jv6jFbjE0Hd.jpg" alt="" /></span>
 							<p>From 24th Oct, 2018 to till date</br>IT Analyst at Tata Consultancy Services</p>
 							<p><ul style="list-style-type:square">
-  <li><b>Project:</b> Customer Management Repository</li>
+  <li><b>Project:</b>AML KYC</li>
 </ul>
 
 <ul style="list-style-type:disc">
-  <li>Statistical Analysis (Univariate and Multivariate) on several types of financial data.</li>
-  <li>Machine Learning and Deep Learning model development (regression and classification</li>
+  <li>Statistical Analysis (Univariate and Multivariate) on several types of financial data. Working on a red flag screening process to detect fraudulent activity.</li>
+  <li>Working on a process to extract text data from chat applications and from customer care recorded conversation using ASR and provide a customer feedback score.</li>
+  <li>As a part of auto KYC, working on a proof of concept model to get a facial match score on ID card and customer’s face.</li>
+  <li>As a part of auto KYC, working on a proof of concept model to extract text data from various documents and build a matching engine to identify incorrect information and invalid customer data.</li>
+  <li>Machine Learning and Deep Learning model development (regression and classification algorithms) for different user cases.</li>
   <li>Customer segmentation analysis using clustering and provided critical insights and generated reports.</li>
-  <li>Designed the data pipeline and deployed end to end project using Flask api on GCP server.</li>
-  <li><b>Tech:</b> Python, Scikit‑Learn, Numpy, Pandas, Natural Language Processing, Matplotlib, SQL, GCP, Flask api.</li>
+  <li><b>Tech:</b> Python, Scikit‑Learn, Numpy, Pandas, Natural Language Processing, Matplotlib, SQL, Flask api.</li>
 </ul></p>
 
 <p><ul style="list-style-type:square">
